# NSurface

./: .gitmodules  .project_name  CMakeLists.txt  LICENSE  README.md  build_unix_makefiles.sh  generate_unix_makefiles.sh  generate_unix_makefiles_no_docs.sh  generate_vs2022.bat  generate_vs2022_no_docs.bat
cmake/: CheckDependencies.cmake  GenerateDocs.cmake
cmake/NSurface/: CheckDependencies.cmake  CheckNCPP.cmake  ConfigureDependencies.cmake  ConfigureNCPP.cmake  Version.cmake
documentations/doxygen_markdown/: Overview.md
documentations/internal/: Doxyfile.template
nsurface/: CMakeLists.txt
nsurface/samples/: CMakeLists.txt
nsurface/samples/first_sample/: CMakeLists.txt
nsurface/samples/first_sample/source/: boostrap.cpp
nsurface/samples/hello_nsurface/: CMakeLists.txt
nsurface/samples/hello_nsurface/source/: bootstrap.cpp
nsurface/source/nsurface/: .config  .cpp  .hpp  enums.hpp  interfaces.hpp  keyboard.hpp  keyboard_base.cpp  keyboard_base.hpp  keyboard_manager.hpp  keyboard_manager_base.cpp  keyboard_manager_base.hpp  keycode.hpp  mouse.hpp  mouse_base.cpp  mouse_base.hpp  mouse_manager.hpp  mouse_manager_base.cpp  mouse_manager_base.hpp  prerequisites.hpp  style.cpp  style.hpp  surface.cpp  surface.hpp  surface_base.cpp  surface_base.hpp  surface_desc.hpp  surface_manager.hpp  surface_manager_base.cpp  surface_manager_base.hpp  typedef_cross_platform.hpp
nsurface/source/nsurface/events/: .hpp  key_down_event.hpp  key_up_event.hpp  keyboard_event.hpp  mouse_button_down_event.hpp  mouse_button_event.hpp  mouse_button_up_event.hpp  mouse_event.hpp  mouse_move_event.hpp  mouse_visibility_change_event.hpp  surface_destroy_event.hpp  surface_event.hpp  surface_focus_begin_event.hpp  surface_focus_end_event.hpp  surface_move_event.hpp  surface_moving_event.hpp  surface_post_move_event.hpp  surface_post_resize_event.hpp  surface_resize_event.hpp  surface_resizing_event.hpp  surface_user_destroy_request_event.hpp  text_character_event.hpp
nsurface/source/nsurface/macos/: .hpp  mouse_manager.cpp  mouse_manager.hpp  mouse_manager_backend.h  mouse_manager_backend.hpp  mouse_manager_backend.mm  prerequisites.h  surface.cpp  surface.hpp  surface_backend.h  surface_backend.hpp  surface_backend.mm  surface_manager.cpp  surface_manager.hpp  surface_manager_backend.h  surface_manager_backend.hpp  surface_manager_backend.mm
nsurface/source/nsurface/windows/: .hpp  keyboard.cpp  keyboard.hpp  keyboard_manager.cpp  keyboard_manager.hpp  keycode.hpp  mouse.cpp  mouse.hpp  mouse_manager.cpp  mouse_manager.hpp  mouse_proc.cpp  mouse_proc.hpp  style.cpp  style.hpp  surface.cpp  surface.hpp  surface_manager.cpp  surface_manager.hpp  window_proc.cpp  window_proc.hpp
scripts/: check_dependencies.bat  check_dependencies.sh  check_submodules.bat  check_submodules.sh
scripts/python/: open_clion.py
